# MosaicMedProject

./: .dockerignore  .env.docker.example  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  UPDATE.md  bot.py  data.md  docker-compose.yml  etl_talon.ipynb  instruction.md  instruction_final.md  manage.py  pyproject.toml  start_dagster.py  workspace.yaml
config/: __init__.py  (+5 more)
mosaic_conductor/: pyproject.toml  setup.cfg  setup.py  workspace.yaml
mosaic_conductor/etl/: assets.py  create_folders.py
mosaic_conductor/etl/common/: check_db.py  connect_db.py  universal_extract.py  universal_load.py
mosaic_conductor/etl/config/: mapping.json  oms_mapping.json  oms_old_mapping.json
mosaic_conductor/etl/kvazar/: __init__.py  db_check.py  extract.py  load.py  sensor.py  transform.py  update.py  update_emd_talon.py  update_error.py  update_oms_data.py
mosaic_conductor/local/: assets.py  definitions.py
mosaic_conductor/mosaic_conductor/: assets.py  definitions.py
mosaic_conductor/mosaic_conductor/web/: jobs.py  selenium_driver.py
mosaic_conductor/mosaic_conductor/web/opps/: wo_filter.py  wo_start.py
mosaic_conductor/selenium/: assets.py  config.py  definitions.py  screen.py  selenium_driver.py
mosaic_conductor/selenium/iszl/: jobs.py
mosaic_conductor/selenium/iszl/ops/: iszl_download.py  iszl_filter.py  iszl_start.py
mosaic_conductor/selenium/wo/: __init__.py  config.py  download_file_job.py  driver_resource.py  jobs.py  oms.py  selenium_driver.py
mosaic_conductor/update/: assets.py  definitions.py
mosaic_conductor/update/journal/: update_status.py
(+930 files in other folders)
